v0.0.2
  Lint/spec improvements/fixes
  Package updates restart service
v0.0.1:
  Initial release