@@ -1,6 +1,5 @@
 fixtures:
   repositories:
-    concat: git://github.com/ripienaar/puppet-concat.git
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
   symlinks:
     beaver: "#{source_dir}"
