@@ -1,8 +1,14 @@
-source :rubygems
+source 'https://rubygems.org'
 
 puppetversion = ENV['PUPPET_VERSION']
 gem 'puppet', puppetversion, :require => false
 gem 'puppet-lint'
 gem 'rspec-puppet'
+gem 'puppet-syntax'
 gem 'puppetlabs_spec_helper', '>= 0.4.0'
+
+gem 'beaker-rspec'
+gem 'serverspec'
+#gem 'rspec-system-puppet'
+#gem 'rspec-system-serverspec'
 
