@@ -1,9 +1,11 @@
 require 'spec_helper'
 
-describe 'beaver::config', :type => :class do
+describe 'beaver', :type => :class do
   let(:facts) { { :concat_basedir => '/var/lib/puppet/concat' } }
 
-  it { should contain_concat('/etc/beaver.conf') }
-  it { should contain_concat__fragment('beaver.conf_header').with_order('01') }
+  context 'config' do
+    it { should contain_file('/etc/beaver.conf') }
+    pending "it should test the contents"
+  end
 
 end
